@@ -1,3 +1,9 @@
+2003-07-22  Malcolm Tredinnick <malcolm@commsecure.com.au>
+
+	* wireless-applet.glade, wireless-applet.c: Remove the "show
+	dialog box" preference, since it was never being used
+	internally. Fixes bug #117957.
+
 2003-06-04  Kevin Vandersloot
 
 	* wireless_applet.c: Expand for Fitt's law and pack tight when possible. Also handle 
